@@ -335,7 +335,9 @@ bool Security::HandleSupportedReport
 )
 {
 
+#ifdef DEBUG
 	PrintHex("Security Classes", _data, _length);
+#endif
 	GetNodeUnsafe()->SetSecuredClasses(_data, _length);
 	/* advance the Query Stage */
 	GetNodeUnsafe()->QueryStageComplete(Node::QueryStage_SecurityReport);
@@ -521,12 +523,14 @@ void Security::SendMsg
 		payload1->m_length = 28;
 		payload1->m_part = 1;
 		memcpy( payload1->m_data, &buffer[6], payload1->m_length );
+		payload1->logmsg = _msg->GetLogText();
 		QueuePayload( payload1 );
 
 		SecurityPayload *payload2 = new SecurityPayload();
 		payload2->m_length = length-28;
 		payload2->m_part = 2;
 		memcpy( payload2->m_data, &buffer[34], payload2->m_length );
+		payload2->logmsg = _msg->GetLogText();
 		QueuePayload( payload2 );
 	}
 	else
@@ -536,6 +540,7 @@ void Security::SendMsg
 		payload->m_length = length;
 		payload->m_part = 0;				// Zero means not split into separate messages
 		memcpy( payload->m_data, &buffer[6], payload->m_length );
+		payload->logmsg = _msg->GetLogText();
 		QueuePayload( payload );
 	}
 }
@@ -607,7 +612,10 @@ bool Security::EncryptMessage
 	// Encapsulate the message fragment
 	/* MessageEncapNonceGet doesn't seem to work */
 	//Msg* msg = new Msg( (queueSize>1) ? "SecurityCmd_MessageEncapNonceGet" : "SecurityCmd_MessageEncap", GetNodeId(), REQUEST, FUNC_ID_ZW_SEND_DATA, true );
-	Msg* msg = new Msg( "SecurityCmd_MessageEncap", GetNodeId(), REQUEST, FUNC_ID_ZW_SEND_DATA, true, true, FUNC_ID_APPLICATION_COMMAND_HANDLER, GetCommandClassId() );
+	string LogMessage("SecurityCmd_MessageEncap (");
+	LogMessage.append(payload->logmsg);
+	LogMessage.append(")");
+	Msg* msg = new Msg( LogMessage, GetNodeId(), REQUEST, FUNC_ID_ZW_SEND_DATA, true, true, FUNC_ID_APPLICATION_COMMAND_HANDLER, GetCommandClassId() );
 	msg->Append( GetNodeId() );
 	msg->Append( payload->m_length + 20 );
 	msg->Append( GetCommandClassId() );
@@ -654,7 +662,7 @@ bool Security::EncryptMessage
 		sequence |= 0x30;		// Sequenced, second frame
 	}
 	/* at most, the payload will be 28 bytes + 1 byte for the Sequence. */
-	uint8 plaintextmsg[30];
+	uint8 plaintextmsg[32];
 	plaintextmsg[0] = sequence;
 	for (int i = 0; i < payload->m_length; i++)
 		plaintextmsg[i+1] = payload->m_data[i];
@@ -663,15 +671,18 @@ bool Security::EncryptMessage
 	 * full IV (16 bytes - 8 Random and 8 NONCE) and payload.m_data
 	 */
 	PrintHex("Input Packet:", plaintextmsg, payload->m_length+1);
+#ifdef DEBUG
 	PrintHex("IV:", initializationVector, 16);
+#endif
 	uint8 encryptedpayload[30];
 	aes_mode_reset(this->EncryptKey);
 	if (aes_ofb_encrypt(plaintextmsg, encryptedpayload, payload->m_length+1, initializationVector, this->EncryptKey) == EXIT_FAILURE) {
 		Log::Write(LogLevel_Warning, GetNodeId(), "Failed to Encrypt Packet");
 		return false;
 	}
+#ifdef DEBUG
 	PrintHex("Encrypted Output", encryptedpayload, payload->m_length+1);
-#if 1
+#endif
 	/* the first 8 bytes of a outgoing IV are random */
 	for (int i = 0; i < 8; i++) {
 		//initializationVector[i] = (rand()%0xFF)+1;
@@ -687,6 +698,7 @@ bool Security::EncryptMessage
 		Log::Write(LogLevel_Warning, GetNodeId(), "Failed to Encrypt Packet");
 		return false;
 	}
+#ifdef DEBUG
 	PrintHex("tmp output", tmpoutput, payload->m_length+1);
 #endif
 	for(int i=0; i<payload->m_length+1; ++i )
@@ -717,15 +729,14 @@ bool Security::EncryptMessage
 	{
 		msg->Append( mac[i] );
 	}
+#ifdef DEBUG
 	PrintHex("Auth", mac, 8);
+#endif
 	msg->Append( GetDriver()->GetTransmitOptions() );
+#ifdef DEBUG
 	PrintHex("Outgoing", msg->GetBuffer(), msg->GetLength());
-	//exit(-1);
+#endif
 	GetDriver()->SendMsg(msg, Driver::MsgQueue_Security);
-	/* if its a MessageEncapNonceGet then NONCE is automatically sent after the device recieves this message */
-//	if (queueSize>1) {
-//		RequestNonce();
-//	}
 
 	/* finally, if the message we just sent is a NetworkKeySet, then we need to reset our Network Key here
 	 * as the reply we will get back will be encrypted with the new Network key
@@ -784,12 +795,10 @@ bool Security::DecryptMessage
 		return false;
 	}
 
-#if 1
 	uint8 iv[17];
 	createIVFromPacket_inbound(_data, iv); /* first 8 bytes of Packet are the Random Value generated by the Device
 									* 2nd 8 bytes of the IV are our nonce we sent previously
 									*/
-#endif
 	uint8 decryptpacket[32];
 	memset(&decryptpacket[0], 0, 32);
 	uint32 encryptedpacketsize = _length-11-8;
@@ -803,11 +812,13 @@ bool Security::DecryptMessage
 			encyptedpacket[i] = _data[9+i];
 		}
 	}
+#ifdef DEBUG
 	Log::Write(LogLevel_Debug, GetNodeId(), "Encrypted Packet Sizes: %d (Total) %d (Payload)", _length, encryptedpacketsize);
 	PrintHex("IV", iv, 16);
 	PrintHex("Encrypted", encyptedpacket, 16);
 	/* 8 - IV - 2 - Command Header */
 	PrintHex("Auth", &_data[8+encryptedpacketsize+2], 8);
+#endif
 	aes_mode_reset(this->EncryptKey);
 #if 0
 	uint8_t iv[16] = {  0x81, 0x42, 0xd1, 0x51, 0xf1, 0x59, 0x3d, 0x70, 0xd5, 0xe3, 0x6c, 0xcb, 0x02, 0xd0, 0x3f, 0x5c,  /* */  };
@@ -905,9 +916,10 @@ bool Security::GenerateAuthentication
 	memcpy( &buffer[4], &_data[9], _length-19 );	// Encrypted message
 
 	uint8 bufsize = _length - 19 + 4; /* the size of buffer */
-
+#ifdef DEBUG
 	PrintHex("Raw Auth (minus IV)", buffer, bufsize);
 	Log::Write(LogLevel_Debug, GetNodeId(), "Raw Auth (Minus IV) Size: %d (%d)", bufsize, bufsize+16);
+#endif
 
 	aes_mode_reset(this->AuthKey);
 	/* encrypt the IV with ecb */
@@ -957,7 +969,9 @@ bool Security::GenerateAuthentication
 		}
 	}
 	/* we only care about the first 8 bytes of tmpauth as the mac */
+#ifdef DEBUG
 	PrintHex("Computed Auth", tmpauth, 8);
+#endif
 	/* so only copy 8 bytes to the _authentication var */
 	memcpy(_authentication, tmpauth, 8);
 	return true;
@@ -1000,8 +1014,8 @@ void Security::SendNonceReport
 
 	/* this should be pretty random */
 	for (int i = 0; i < 8; i++) {
-		//this->currentNonce[i] = (rand()%0xFF)+1;
-		this->currentNonce[i] = 0xAA;
+		this->currentNonce[i] = (rand()%0xFF)+1;
+		//this->currentNonce[i] = 0xAA;
 	}
 
 
